Added multiple searches

--- a/AngularClient/src/app/inspection/add-edit-inspection/add-edit-inspection.component.html
+++ b/AngularClient/src/app/inspection/add-edit-inspection/add-edit-inspection.component.html
@@ -1,5 +1,8 @@
 <form>
   <div class="inspectionForm">
+    <div class="addingBtn">
+      <button>Add</button>
+    </div>
     <label>URL</label>
     <input type="text" name="url">
   </div>
