--- a/AngularClient/src/app/app.component.html
+++ b/AngularClient/src/app/app.component.html
@@ -1,8 +1,34 @@
-<div class="container">
-  <app-inspection></app-inspection>
-  <div class="addPagePanel">
-    <button>Add</button>
-    <app-add-edit-inspection></app-add-edit-inspection>
+  <div class="container">
+    <app-inspection></app-inspection>
+    <div class="addPagePanel">
+      <app-add-edit-inspection></app-add-edit-inspection>
+    </div>
+
+    <!-- Button trigger modal -->
+    <button onclick = "document.getElementById('exampleModal').hidden = true" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+      Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+
 
