--- a/AngularClient/src/app/inspection/inspection.component.html
+++ b/AngularClient/src/app/inspection/inspection.component.html
@@ -1,21 +1,6 @@
 Table
 <br>
   <select>
-    <option *ngFor = "let item of newsPagesList$|async">{{item.title}}</option>
+    <option id="selectedItem{{item.id}}" *ngFor = "let item of newsPagesList$|async">{{item.title}}</option>
   </select>
 <br>
-<!--<select>
-  <option value="option-1">option1</option>
-  <option value="option-2">option2</option>
-</select>-->
-<!--<table>
-  <tbody>
-  <tr *ngFor = "let item of newsPagesList$|async" ng-model = "data.">
-    <td>{{item.id}}</td>
-    <td>{{item.url}}</td>
-    <td>{{item.title}}</td>
-    <td>{{item.text}}</td>
-  </tr>
-  </tbody>
-</table>-->
-
