Removing at client

--- a/AngularClient/src/app/inspection/add-edit-inspection/add-edit-inspection.component.html
+++ b/AngularClient/src/app/inspection/add-edit-inspection/add-edit-inspection.component.html
@@ -9,9 +9,9 @@
 
   <div class="inspectionForm">
     <div class="addingBtn">
-      <button (click)="delete(IdToDelete.value);">Delete</button>
+      <button (click)="delete(UrlToRemove.value);">Delete</button>
     </div>
-    <label>ID</label>
-    <input type="text" id="IdToDelete" name="url" #IdToDelete>
+    <label>Url to remove</label>
+    <input type="text" id="UrlToRemove" name="url" #UrlToRemove>
   </div>
 </form>
