--- a/AngularClient/src/app/inspection/show-inspection/show-inspection.component.html
+++ b/AngularClient/src/app/inspection/show-inspection/show-inspection.component.html
@@ -1,33 +1,38 @@
 <br>
 <div class="control-panels">
-  <div class="all-selection-panel">
-    <button (click)="getAll()">All items</button>
+  <div class="search-panel">
+    <button class="search-button"  (click)="getAll()">All items</button>
   </div>
-  <div class="word-search-panel">
-    <button (click)="getWordsAtPage(UrlWordSearch.value, wordPartSource.value)">Find words</button>
+  <div class="search-panel">
+    <button class="search-button" class="search-button" (click)="getWordsAtPage(UrlWordSearch.value, wordPartSource.value)">Find words</button>
     <input type="text" id="urlWordSearch" name="urlWordSearch" #UrlWordSearch>
     <input type="text" id="wordPartSource" name="wordPartSearch" #wordPartSource>
+
+    <select>
+      <option  *ngFor = "let item of wordsAtNewsPage$|async">{{item}}</option>
+    </select>
   </div>
-  <div class="word-search-panel">
-    <button (click)="getEntitiesAtPage(entitiesByPageUrl.value, entitiesByPageEntity.value)">Find entities at page</button>
+  <div class="search-panel">
+    <button class="search-button" (click)="getEntitiesAtPage(entitiesByPageUrl.value, entitiesByPageEntity.value)">Find entities at page</button>
     <input type="text" id="entitiesByPageUrl" name="entitiesByPageUrl" #entitiesByPageUrl>
     <input type="text" id="entitiesByPageEntity" name="wordPartSearch" #entitiesByPageEntity>
+
+    <select>
+      <option  *ngFor = "let item of entitiesAtNewsPage$|async">{{item}}</option>
+    </select>
+
   </div>
-  <div class="word-search-panel">
-    <button (click)="getPagesByEntity(pagesByEntitySearch.value)">Find pages by entity</button>
+  <div class="search-panel">
+    <button class="search-button" (click)="getPagesByEntity(pagesByEntitySearch.value)">Find pages by entity</button>
     <input type="text" id="pagesByEntitySearchSource" name="wordPartSearch" #pagesByEntitySearch>
   </div>
-  <div class="word-search-panel">
-    <button (click)="getPagesByName(pageName.value)">Find pages by name</button>
-    <input type="text" id="pageName" name="wordPartSearch" #pageName>
+  <div class="search-panel">
+    <button class="search-button" (click)="getPagesByName(pageName.value)">Find pages by name</button>
+    <input (change)="getPagesByName(pageName.value)" type="text" id="pageName" name="wordPartSearch" #pageName>
   </div>
-  <select>
-    <option  *ngFor = "let item of wordsAtNewsPage$|async">{{item}}</option>
-  </select>
-  <select>
-    <option  *ngFor = "let item of entitiesAtNewsPage$|async">{{item}}</option>
-  </select>
+
 </div>
+
 <div class="items">
   <select>
     <option  *ngFor = "let item of newsPagesList$|async">{{item.title}}</option>
