styles and check for null in add/remove

--- a/AngularClient/src/app/inspection/add-edit-inspection/add-edit-inspection.component.css
+++ b/AngularClient/src/app/inspection/add-edit-inspection/add-edit-inspection.component.css
@@ -1,6 +1,7 @@
-.inspectionForm{
-  text-align: right;
+.search-panel{
+  margin-bottom: 17px;
 }
-.addingBtn{
-  padding-bottom: 10px;
+.base-button{
+  margin: 12px 8px 15px 0;
+  border-radius: 5px;
 }
