--- a/AngularClient/src/app/inspection/show-inspection/show-inspection.component.css
+++ b/AngularClient/src/app/inspection/show-inspection/show-inspection.component.css
@@ -1,7 +1,11 @@
-.search-panel{
-  padding-bottom: 17px;
-}
-.search-button{
-  margin-right: 12px;
+.base-button{
+  margin: 12px 8px 15px 0;
   border-radius: 5px;
+}
+.base-option{
+  margin-top: 17px;
+  min-width: 125px;
+}
+.base-input{
+  margin-right: 12px;
 }
