--- a/AngularClient/src/app/inspection/show-inspection/show-inspection.component.css
+++ b/AngularClient/src/app/inspection/show-inspection/show-inspection.component.css
@@ -9,3 +9,17 @@
 .base-input{
   margin-right: 12px;
 }
+.title-item{
+  max-width: 200px;
+}
+.items-value{
+  padding: 12px;
+  border: 2px solid gray;
+}
+.big-text{
+  border: none;
+  outline: none;
+}
+.item-url{
+  max-width: 200px;
+}
